<?xml version="1.0"?>
<package format="2">
  <name>pacmod_game_control_ui</name>
  <version>1.0.0</version>
  <description>The pacmod_game_control_ui package</description>
  <maintainer email="calib_fenoglio@todo.todo">calib_fenoglio</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pacmod_msgs</depend>
  <depend>qt_build</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>roslint</depend>

  <export>
  
    <!-- Other tools can request additional information be placed here -->
    
  </export>
</package>
